# Codspeed-Advent-Of-Code-2024

./: Cargo.toml
input/benches/: day2.rs
input/benches/.github/workflows/: codspeed.yml
src/: day1.rs  day2.rs  lib.rs
