[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
atoi_simd = "0.16"
memchr = "2"

[features]
debug = []

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2" }
